name:                timeline-store
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/timeline-store#readme
license:             AGPL
license-file:        LICENSE
author:              D치niel K치ntor
maintainer:          timeline.store@daniel-kantor.com
copyright:           2017 D치niel K치ntor
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , aeson == 1.1.2.0
  default-language:    Haskell2010

executable timeline-store-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , timeline-store
  default-language:    Haskell2010

test-suite timeline-store-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , timeline-store
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/kantord/timeline-store
